--- a/www/Home.html
+++ b/www/Home.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 <head>
-    <meta charset="utf-8">
-    <!--
-    Customize this policy to fit your own app's needs. For more guidance, see:
-        https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-    Some notes:
-        * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-        * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-        * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-            * Enable inline JS: add 'unsafe-inline' to default-src
-    -->
+
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>HomePage</title>
+
 </head>
-<body >
-<img src="img/m6.png" class="img">
-<div> <a href="Cakes&Sweets.html" class="cakes1"> Cakes & Sweets </a></div></br>
-<img src="img/m8.png" class="img"/>
-<div> <a href="foods.html" class="foods"> Foods </a> </div></br>
-<img src="img/m7.png" class="img"/>
-<div> <a href="drinks.html" class="drinks"> Drinks </a></div>
-<hr>
-<ul id="nav">
+<body>
 
-    <button><a href="menu.html">Menu</a></button>
-    <button>Favorits</button>
-    <button>My calender</button>
-    <button>Preferences</button>
+<div data-role="page">
+    <div data-role="main" class="ui-content">
+        <div class="ui-field-contain">
+            <div class="container">
+                <img src="img/m6.png" class="img">
 
-</ul>
-</hr>
+                <div> <a href="Cakes&Sweets.html" class="cakes1"> Cakes & Sweets </a></div>
+            </div>
+            <br>
+            <div class="container">
+                <img src="img/m8.png" class="img"/>
+                <div> <a href="foods.html" class="foods"> Foods </a> </div>
 
+            </div>
+            <br>
+            <div class="container">
+                <img src="img/m7.png" class="img"/>
+                <div> <a href="drinks.html" class="drinks"> Drinks </a></div>
+            </div>
 
+        </div>
 
+    </div>
+    <hr>
+    <div data-role="footer">
+        <div data-role="controlgroup" data-type="horizontal">
+            <button><a href="#" class="ui-btn-inline">Menu</a></button>
+            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="#" class="ui-btn-inline">My calender</a></button>
+            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
-
