--- a/www/Calamari_salad.html
+++ b/www/Calamari_salad.html
@@ -13,27 +13,34 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Calamari salad</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Calamari salad</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/Saladecalamar.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
 
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
+                <li>1 clove crushed garlic</li>
+                <li>1 pinch salt</li>
+                <li>1 cup white wine</li>
+                <li>½ cup water</li>
+                <li>2 pounds squid</li>
+                <li>2 tablespoons minced shallots</li>
+                <li>2 cloves crushed garlic</li>
+                <li>½ cup extra virgin olive oil</li>
+                <li>2 teaspoons lemon zest</li>
+                <li>½ cup fresh lemon juice</li>
+                <li>salt and pepper to taste</li>
+
+
 
             </ul>
         </div>
@@ -41,11 +48,11 @@
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>Prepare squid by pulling off the tentacles and head. Reach into the body and pull out the hard quill and discard. Peel the colored skin off from the body. Rinse under cold water and cut the body into rings. Cut the tentacles from the head and discard the head.</li>
+                <li>Place the onion, garlic, wine and water in a medium saute pan. Bring to liquid to a boil. Add the prepared squid. Turn heat down to low. Cover and simmer for 1 hour.</li>
+                <li>While squid is cooking prepare the dressing. In small bowl stir together the shallot, 2 garlic cloves, olive oil, lemon zest, lemon juice and salt an pepper to taste.</li>
+                <li>Drain the cooked squid and let cool slightly. In a medium bowl toss the squid with the dressing cover and let marinate for at least 15 minutes and serve.</li>
+
 
                 <li>Enjoy!</li>
             </ol>
