--- a/www/Hot_chocolate.html
+++ b/www/Hot_chocolate.html
@@ -13,40 +13,34 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>HotChocolate</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Hot chocolate</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/hotchocolate.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
-
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
-
+                <li>60 g dark chocolate</li>
+                <li>1 tablespoon of bitter cocoa</li>
+                <li>40 cl of milk</li>
+                <li>10 cl of liquid cream</li>
+                <li>20g sugar</li>
             </ul>
         </div>
         <div data-role="content">
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
-
+                <li>In a saucepan, pour the milk, cream and sugar. Boil the water.</li>
+                <li>Off the heat, add the dark chocolate and cocoa powder, then whisk vigorously until the mixture is smooth.</li>
+                <li>Pour immediately into cups or bowls.</li>
                 <li>Enjoy!</li>
             </ol>
 
