--- a/www/Strawberry_juice.html
+++ b/www/Strawberry_juice.html
@@ -13,27 +13,24 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Strawberry_juice</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Strawberry Juice</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/strawberryjuice.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
-
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
+                <li>2- pounds fresh strawberries , cleaned and halved</li>
+                <li>2- cups sugar</li>
+                <li>glass bottle</li>
+                <li>water or soda water</li>
 
             </ul>
         </div>
@@ -41,11 +38,20 @@
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>Place half of the strawberries in a large bowl; cover with 1-cup of sugar.</li>
+                <li>Add the remaining strawberries and sprinkle with the rest of the sugar.</li>
+                <li>Cover the bowl and place in the fridge for 24 hours.</li>
+                <li>Transfer the berries and the juice into a large saucepan.</li>
+                <li>Over medium-high heat, bring the mixture to a boil; turn the heat down and continue to simmer for 30 minutes.</li>
+                <li>Remove from heat and strain the mixture through a fine mesh strainer into a large bowl.</li>
+                <li>Using a spatula, press the strawberries to release all the juices.</li>
+                <li>In the meantime, preheat oven to 170.</li>
+                <li>Wash the glass bottle; place it on a baking sheet and put it in the oven for 30 minutes.</li>
+                <li>Sterilize the cap of the bottle by placing it in a bowl and pour boiling water right over it.</li>
+                <li>Remove glass bottle from the oven.</li>
+                <li>Pour the juice into the bottle.</li>
+                <li>Seal with the cap and let completely cool.</li>
+                <li>Store in refrigerator.</li>
 
                 <li>Enjoy!</li>
             </ol>
@@ -69,3 +75,4 @@
 
 </body>
 </html>
+
