--- a/www/cakes.html
+++ b/www/cakes.html
@@ -35,7 +35,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
     <link rel="stylesheet" href="css/index.css">
-    <title>HomePage</title>
+    <title>Cakes</title>
 </head>
 <body >
 <div data-role="page">
@@ -46,10 +46,10 @@
 
     <div data-role="main" class="ui-content">
 
-<img src="img/lemon.jpg"class="lemon" >
+        <a href="lemon_cake.html" ><img src="img/lemon.jpg"class="lemon" ></a>
 
-<img src="img/chocolate.jpg" class="chocolate" />
-<img src="img/cheesecake.jpeg" class="cheese" />
+        <a href="chocolate_cake.html"> <img src="img/chocolate.jpg" class="chocolate" /></a>
+        <a href="cheese_cake.html" ><img src="img/cheesecake.jpeg" class="cheese" /></a>
     </div>
 
 
@@ -57,10 +57,10 @@
 
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
