--- a/www/cheese_cake.html
+++ b/www/cheese_cake.html
@@ -38,7 +38,7 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Chocolate cake</title>
+    <title>Cheese cake</title>
 </head>
 <body >
 <div data-role="page">
@@ -92,9 +92,9 @@
 <div data-role="footer">
     <div data-role="controlgroup" data-type="horizontal">
         <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
-        <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-        <button><a href="#" class="ui-btn-inline">My calender</a></button>
-        <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+        <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+        <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+        <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
     </div>
 </div>
 
