--- a/www/colddrinks.html
+++ b/www/colddrinks.html
@@ -38,7 +38,7 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>HomePage</title>
+    <title>Cold drinks</title>
 </head>
 <body >
 <div data-role="page">
@@ -47,10 +47,10 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-<img src="img/coktail.jpg"class="lemon" >
+        <a href="coktail.html"> <img src="img/coktail.jpg"class="lemon" ></a>
 
-    <img src="img/Kiwijuice.jpg" class="chocolate" />
-    <img src="img/strawberryjuice.jpg" class="cheese" />
+        <a href="Kiwi_juice.html"><img src="img/Kiwijuice.jpg" class="chocolate" /></a>
+        <a href="Strawberry_juice.html"> <img src="img/strawberryjuice.jpg" class="cheese" /></a>
     </div>
 
 
@@ -58,10 +58,10 @@
 <hr>
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
