--- a/www/croissant.html
+++ b/www/croissant.html
@@ -13,27 +13,28 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Croissant</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Croissant</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/croissant.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
 
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
+                <li>500 g flour</li>
+                <li>25 g baker's yeast</li>
+                <li>25 cl of milkr</li>
+                <li>15 g of salt</li>
+                <li>1 glass of hot water</li>
+                <li>50 g sugar</li>
+                <li>200 g semi-soft butter (must have the same consistency as the dough)</li>
 
             </ul>
         </div>
@@ -41,12 +42,13 @@
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
-
+                <li>Mix the yeast with hot water. Pour over 1/4 of the flour. Beat well, let rise for 15 minutes.</li>
+                <li>Add the rest of the flour, sugar, salt and hot milk. Mix well. The dough should be elastic and no longer stick. Finish the kneading on the table.</li>
+                <li>Roll out into a square. Add the butter in the center and close the 4 sides of the dough (like an envelope on the butter). Roll out lengthwise. (give a ride).</li>
+                <li>Fold in three. Leave to rest for 15 minutes.</li>
+                <li>Make the croissants. Cut the dough into 10cm x 15cm x 15cm triangles. Moisten lightly with cold water. Roll starting from the base. For my part, I use a system that I learned at the Hotel School to know how many turns I have given: I press / mark the dough with one finger (1 turn), 2 fingers (2 turns), etc. . I give in all 4 to 5 turns.</li>
+                <li>Make 10cm x 15cm x 15cm triangles. Lightly moisten with cold water, then brown with egg.</li>
+                <li>Let rise for an hour. Bake at 200-210 ° C for 10 to 15 minutes until golden brown.</li>
                 <li>Enjoy!</li>
             </ol>
 
