--- a/www/entrees.html
+++ b/www/entrees.html
@@ -43,24 +43,23 @@
 <body >
 <div data-role="page">
     <div data-role="header">
-<h1>Entrees</h1>
+        <h1>Entrees</h1>
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-    <img src="img/SaladeGrillesTunisienne.jpg"class="lemon" >
-
-    <img src="img/Saladecesar.jpeg" class="chocolate" />
-    <img src="img/Saladecalamar.jpg" class="cheese" />
+        <a href="grilled_salad.html" ><img src="img/SaladeGrillesTunisienne.jpg"class="lemon" ></a>
+        <a href="Cesar_salad.html" > <img src="img/Saladecesar.jpeg" class="chocolate" /></a>
+        <a href="Calamari_salad.html" ><img src="img/Saladecalamar.jpg" class="cheese" /></a>
     </div>
 
 
 <hr>
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
