--- a/www/foods.html
+++ b/www/foods.html
@@ -43,23 +43,23 @@
 <body >
 <div data-role="page">
     <div data-role="header">
-<h1>Foods</h1>
+        <h1>Foods</h1>
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-<img src="img/wood.jpeg" class="img2">
-<div> <a href="entrees.html" class="entrees"> Entrees  </a></div></br>
-<img src="img/wood.jpeg" class="img2"/>
-<div> <a href="maincourse.html" class="maincourse"> Main course </a> </div></br>
+        <img src="img/wood.jpeg" class="img2">
+        <div> <a href="entrees.html" class="entrees"> Entrees  </a></div></br>
+        <img src="img/wood.jpeg" class="img2"/>
+        <div> <a href="maincourse.html" class="maincourse"> Main course </a> </div></br>
     </div>
 
 <hr>
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
