--- a/www/hotdrinks.html
+++ b/www/hotdrinks.html
@@ -47,19 +47,18 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-<img src="img/coffee.jpg"class="lemon" >
-
-    <img src="img/hotchocolate.jpg" class="chocolate" />
-    <img src="img/greentea.jpg" class="cheese" />
+        <a href="Coffee.html"> <img src="img/coffee.jpg"class="lemon" ></a>
+        <a href="Hot_chocolate.html"><img src="img/hotchocolate.jpg" class="chocolate" /></a>
+        <a href="tea.html"><img src="img/greentea.jpg" class="cheese" /></a>
     </div>
 
 <hr>
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
