--- a/www/maincourse.html
+++ b/www/maincourse.html
@@ -38,32 +38,27 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>HomePage</title>
+    <title>Main course</title>
 </head>
 <body>
 <div data-role="page">
     <div data-role="header">
-
         <h1>Main course</h1>
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-<img src="img/couscous.jpg"class="lemon" >
+        <a href="Coscous.html" ><img src="img/couscous.jpg" class="cheese" /></a>
+        <a href="Spaghetti.html" > <img src="img/spaghetti.jpg" class="chocolate" /></a>
+        <a href="Lasagne.html" ><img src="img/lasagne.jpg" class="cheese" /></a>
 
-    <img src="img/spaghetti.jpg" class="chocolate" />
-    <img src="img/lasagne.jpg" class="cheese" />
     </div>
-
-
-
 <hr>
-
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
