--- a/www/traditionals.html
+++ b/www/traditionals.html
@@ -48,10 +48,10 @@
 
     <div data-role="main" class="ui-content">
 
-        <img src="img/Kaakwarka.jpg"class="lemon" >
+        <a href="Kaakwarka.html"><img src="img/Kaakwarka.jpg"class="lemon" ></a>
 
-            <img src="img/makrouth.png" class="chocolate" />
-            <img src="img/bjawiya.jpg" class="cheese" />
+        <a href="Makroudh.html"><img src="img/makrouth.png" class="chocolate" /></a>
+        <a href="Bjawiya.html"><img src="img/bjawiya.jpg" class="cheese" /></a>
 
 
     </div>
@@ -61,10 +61,10 @@
 
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
