--- a/www/Coffee.html
+++ b/www/Coffee.html
@@ -13,27 +13,24 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Coffee</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Coffee</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/coffee.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
 
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
+                <li>Water</li>
+                <li>Sugar</li>
+                <li>Turkish coffee (very very fine ground Arabica)</li>
 
             </ul>
         </div>
@@ -41,11 +38,10 @@
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>Dose the water by filling each cup with water, then pour the water into the Turkish coffee maker. Use espresso mugs or Turkish coffee mugs.</li>
+                <li>Add the coffee to the coffee maker, as well as the sugar. Mix and bring everything to a boil, stirring regularly.</li>
+                <li>When a foam forms on top, remove the coffee maker from the heat and very gently pour the coffee against the rim of the cup, filling it only with liquid, leaving the coffee grounds at the bottom.</li>
+                <li>Put the coffee maker back on the heat, wait for the foam to reform and repeat the operation. In general it takes 2 to 3 such operations to fill the cups, before serving.</li>
 
                 <li>Enjoy!</li>
             </ol>
@@ -69,3 +65,4 @@
 
 </body>
 </html>
+
