--- a/www/Home.html
+++ b/www/Home.html
@@ -9,7 +9,7 @@
     <meta name="color-scheme" content="light dark">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+
     <link rel="stylesheet" href="css/index.css">
 
 </head>
@@ -20,14 +20,12 @@
         <div class="ui-field-contain">
             <div class="container">
                 <img src="img/m6.png" class="img">
-
                 <div> <a href="Cakes&Sweets.html" class="cakes1"> Cakes & Sweets </a></div>
             </div>
             <br>
             <div class="container">
                 <img src="img/m8.png" class="img"/>
                 <div> <a href="foods.html" class="foods"> Foods </a> </div>
-
             </div>
             <br>
             <div class="container">
@@ -41,10 +39,9 @@
     <hr>
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
