--- a/www/Kaakwarka.html
+++ b/www/Kaakwarka.html
@@ -13,39 +13,40 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Kaak Warka</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Kaak Warka</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/Kaakwarka.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
 
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
-
+                <li>1 kg of flour</li>
+                <li>400 gr of butter</li>
+                <li>450 gr rose water</li>
+                <li>500 gr fine almond powder</li>
+                <li>200 gr of icing sugar</li>
             </ul>
         </div>
         <div data-role="content">
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>Preparation of the Dough: Mix the flour with the softened butter (at room temperature).</li>
+                <li>Add 350 g of rose water and knead until a smooth dough is obtained. Leave to rest for a few hours.</li>
+                <li>Preparation of the almond filling: Combine the almond powder and the sugar together then incorporate 100 g of rose water in order to obtain a homogeneous texture.</li>
+                <li>Roll out the dough in a thin layer (1mm thick) using a rolling pin.</li>
+                <li>Form the stuffing into small sausages (5cm).</li>
+                <li>Roll up the stuffing with the dough.</li>
+                <li>Assemble the two ends to form a round washer.</li>
+                <li>Bake at 180 ° for 10 minutes.</li>
 
                 <li>Enjoy!</li>
             </ol>
