--- a/www/Kiwi_juice.html
+++ b/www/Kiwi_juice.html
@@ -13,40 +13,38 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>kiwi_juice</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Kiwi Juice</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/kiwijuice.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
-
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
-
+                <li>3 kiwi</li>
+                <li>4-5 ice cubes or a handful</li>
+                <li>1.5 tsp sugar or honey</li>
+                <li>1/2 cup water</li>
             </ul>
         </div>
         <div data-role="content">
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
-
+                <li>Peel the kiwi fruit well with the help of a peeler.</li>
+                <li>Make small slices of the fruit with a knife.</li>
+                <li>Add the slices of the kiwi into a juice blender.</li>
+                <li>Add ice cubes, sugar/honey, little water.</li>
+                <li>Blend the juice finely.</li>
+                <li>Take serving glasses and pour the juice directly without straining.</li>
+                <li>Garnish the juice with round slices of kiwi over the juice.</li>
+                <li>Serve the juice chilled and fresh.</li>
                 <li>Enjoy!</li>
             </ol>
 
@@ -69,3 +67,4 @@
 
 </body>
 </html>
+
