--- a/www/Makroudh.html
+++ b/www/Makroudh.html
@@ -13,27 +13,23 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Makrouth</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Makrouth</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/makrouth.png"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
 
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
+                <li>2 bowls of medium semolina, 1 bowl of butter, 1 pinch of salt, 1 bowl of water, oil for frying.</li>
+                <li>2 cups of dates paste, 1 small cup of caster sugar, 1 tablespoon of cinnamon powder, 3 tablespoons of orange blossom water, honey.</li>
 
             </ul>
         </div>
@@ -41,11 +37,11 @@
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>Mix the semolina, butter, salt..</li>
+                <li>Add lukewarm water and work until you obtain a homogeneous and smooth dough. Leave to rest for a few moments.</li>
+                <li>Prepare the stuffing with the date paste, sugar, cinnamon, orange blossom water, mix well.</li>
+                <li>Then take the semolina dough, divide it into a small heap, which is molded into small sausages, split them in the middle, then insert small sticks of stuffing into the slot, weld the opening of the roll again to smooth it .</li>
+                <li>Then cut it into a diamond shape and fry in a large deep fryer (preferably in a deep fryer). Brown both sides and remove with a skimmer, let drain then soak in honey or sugar syrup (in a saucepan mix water + caster sugar + lemon juice for taste. The syrup is ready when a drop of syrup placed on a plate holds without crushing).</li>
 
                 <li>Enjoy!</li>
             </ol>
