--- a/www/breakfast.html
+++ b/www/breakfast.html
@@ -36,7 +36,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
     <link rel="stylesheet" href="css/index.css">
-    <title>HomePage</title>
+    <title>Breakfast</title>
 </head>
 <body >
 <div data-role="page">
@@ -47,10 +47,10 @@
 
     <div data-role="main" class="ui-content">
 
-        <img src="img/gaufre.jpg"class="lemon" >
+        <a href="gaufre.html"> <img src="img/gaufre.jpg"class="lemon" ></a>
 
-            <img src="img/crepe.jpg" class="chocolate" />
-            <img src="img/croissant.jpg" class="cheese" />
+        <a href="crepe.html"><img src="img/crepe.jpg" class="chocolate" /></a>
+        <a href="croissant.html"><img src="img/croissant.jpg" class="cheese" /></a>
 
     </div>
 
@@ -59,10 +59,10 @@
 
     <div data-role="footer">
         <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="#" class="ui-btn-inline">Menu</a></button>
-            <button><a href="#" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="#" class="ui-btn-inline">My calender</a></button>
-            <button><a href="#" class="ui-btn-inline">Preferences</a></button>
+            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
         </div>
     </div>
 </div>
