--- a/www/gaufre.html
+++ b/www/gaufre.html
@@ -1,83 +1,69 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 <head>
     <meta charset="utf-8">
-    <!--
-    Customize this policy to fit your own app's needs. For more guidance, see:
-        https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-    Some notes:
-        * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-        * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-        * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-            * Enable inline JS: add 'unsafe-inline' to default-src
-    -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Chocolate cake</title>
+    <title>Waffle</title>
 </head>
 <body >
-<h1>Waffle</h1>
+<div data-role="page">
+    <div data-role="header">
+        <h1>Waffle</h1>
+    </div>
+    <hr>
+    <div data-role="main" class="ui-content">
+        <div><img src="img/gaufre.jpg"class="img3" ></div>
+        <div data-role="content">
+            <h1>Ingredient</h1>
+            <hr>
+            <ul data-role="listview" data-inset="true">
+
+                <li>400 g flour</li>
+                <li>150 ml milk</li>
+                <li>150 g pearl sugar</li>
+                <li>1 sachet of vanilla sugar</li>
+                <li>200 g of soft butter</li>
+                <li>2 whole eggs</li>
+                <li>25 g fresh baker's yeast</li>
+                <li>Un peu de sel</li>
+            </ul>
+        </div>
+        <div data-role="content">
+            <h1>Preparation steps</h1>
+            <hr>
+            <ol data-role="none" data-autodividers="false">
+                <li>In a saucepan, warm the milk. Then dilute the yeast in the milk, making sure it is not too hot.</li>
+                <li>Pour the flour into a bowl. Add the vanilla sugar, salt, whole eggs and finally the mixture of milk and yeast. Knead everything for at least 5 minutes</li>
+                <li>Cover the dough with a clean cloth and let swell for at least half an hour</li>
+                <li>Once the time is up, add the soft butter and knead the Belgian waffle dough again by hand (avoid melted butter so that the dough is not sticky.</li>
+                <li>Incorporate the pearl sugar into the dough. Take the time to mix well. Then divide your dough into 12 small balls</li>
+                <li>After a quarter of an hour's pause (to rise in volume), the waffle dough is ready to bake</li>
+                <li>Enjoy!</li>
+            </ol>
+
+        </div>
+    </div>
+</div>
+
 <hr>
-<img src="img/gaufre.jpg"class="img3" >
-<h1>Ingredient</h1>
-<hr>
-<ul>
+<div data-role="footer">
+    <div data-role="controlgroup" data-type="horizontal">
+        <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+        <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+        <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+        <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
+    </div>
+</div>
 
-    <li>400 g flour</li>
-    <li>150 ml milk</li>
-    <li>150 g pearl sugar</li>
-    <li>1 sachet of vanilla sugar</li>
-    <li>200 g of soft butter</li>
-    <li>2 whole eggs</li>
-    <li>25 g fresh baker's yeast</li>
-    <li>Un peu de sel</li>
-</ul>
-<h1>Preparation steps</h1>
-<hr>
-<ol>
-    <li>In a saucepan, warm the milk. Then dilute the yeast in the milk, making sure it is not too hot.</li>
-    <li>Pour the flour into a bowl. Add the vanilla sugar, salt, whole eggs and finally the mixture of milk and yeast. Knead everything for at least 5 minutes</li>
-    <li>Cover the dough with a clean cloth and let swell for at least half an hour</li>
-    <li>Once the time is up, add the soft butter and knead the Belgian waffle dough again by hand (avoid melted butter so that the dough is not sticky.</li>
-    <li>Incorporate the pearl sugar into the dough. Take the time to mix well. Then divide your dough into 12 small balls</li>
-    <li>After a quarter of an hour's pause (to rise in volume), the waffle dough is ready to bake</li>
-    <li>Enjoy!</li>
-</ol>
-
-</body>
-
-<hr>
-<ul id="nav">
-
-    <button><a href="menu.html">Menu</a></button>
-    <button>Favorits</button>
-    <button>My calender</button>
-    <button>Preferences</button>
-
-</ul>
-</hr>
 
 
 
