--- a/www/grilled_salad.html
+++ b/www/grilled_salad.html
@@ -13,27 +13,28 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>Grilled salad</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Grilled salad</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/SaladeGrillesTunisienne.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
 
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
+                <li> ½ tsp caraway seeds, whole</li>
+                <li>250 g green pepper</li>
+                <li>100 g red chilli</li>
+                <li>2 garlic : 2 cloves</li>
+                <li>2 tomatoes</li>
+                <li>5 Tbsp olive oil</li>
+
 
             </ul>
         </div>
@@ -41,11 +42,11 @@
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>Grill the green peppers until the skins are blackended. If you have a gas stove you can char the skins over one of the rings. Set aside then peel and core when they are cool enough to handle.</li>
+                <li> Meanwhile place the chilli, garlic and tomatoes in a roasting dish and roast in a hot oven until the garlic is soft. You can remove the skins from the tomatoes and de-seed the chilli at this point if you wish.</li>
+                <li>Place all the vegetables in a blender or food processor - alternatively strain through a sieve.</li>
+                <li>Gently heat the caraway seeds and oil in a frying pan until fragrant. Then add to the vegetables and whiz to a paste.</li>
+                <li>Chill before serving. Serve in a bowl with quarters of hard boiled eggs, chunks of tuna fish or black olives.</li>
 
                 <li>Enjoy!</li>
             </ol>
