--- a/www/lemon_cake.html
+++ b/www/lemon_cake.html
@@ -1,85 +1,74 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 <head>
     <meta charset="utf-8">
-    <!--
-    Customize this policy to fit your own app's needs. For more guidance, see:
-        https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-    Some notes:
-        * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-        * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-        * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-            * Enable inline JS: add 'unsafe-inline' to default-src
-    -->
+
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>HomePage</title>
+    <title>Lemon cake</title>
 </head>
 <body >
-<h1>Lemon cake</h1>
+<div data-role="page">
+    <div data-role="header">
+        <h1>Lemon cake</h1>
+    </div>
+    <hr>
+    <div data-role="main" class="ui-content">
+        <div><img src="img/lemon.jpg"class="img3" ></div>
+        <div data-role="content">
+
+            <h1>Ingredient</h1>
+            <hr>
+            <ul data-role="listview" data-inset="true">
+                <li>1 2/3 cups (200 g) plain gluten free flour blend</li>
+                <li>3/4 cup (65 g) almond flour</li>
+                <li>1/2 tsp xanthan gum</li>
+                <li>3 tsp baking powder</li>
+                <li>1 cup (200 g) granulated sugar</li>
+                <li>pinch of salt</li>
+                <li>2 sticks (226 g) unsalted butter, softened</li>
+                <li>zest of 3 lemons</li>
+                <li>4 medium eggs, room temperature</li>
+                <li>1/2 cup (120 mL) milk, room temperature</li>
+                <li>1 tsp vanilla paste</li>
+                <li>6 tbsp lemon juice</li>
+            </ul>
+        </div>
+        <div data-role="content">
+            <h1>Preparation steps</h1>
+            <hr>
+            <ol data-role="none" data-autodividers="false">
+                <li>Pre-heat the oven to 355 ºF (180 ºC) and line a loaf baking tin with greaseproof/baking paper. (Dimensions of loaf tin: 8.5 inch/21cm long, 4.5 inch/11cm wide and 3inch/7cm high.)</li>
+                <li>In a large bowl, sift together the gluten free flour blend, almond flour, xanthan gum and baking powder. Add the sugar and salt, and mix until combined.</li>
+                <li>Add the softened butter and, using either a stand mixer with the paddle attachment or a hand mixer with the double beater attachments, work the butter into the dry ingredients until you get a texture resembling coarse breadcrumbs in size</li>
+                <li>Add the lemon zest. In a separate bowl, mix together the eggs, milk, vanilla and lemon juice. Add the wet ingredients to the dry+butter mixture, and whisk/mix well until no flour clumps remain and everything is evenly distributed.</li>
+                <li>Transfer the cake batter into the prepared loaf tin, smooth out the top, and bake in the pre-heated oven at 355 ºF (180 ºC) for about 1 hour or until risen, golden brown on top and an inserted toothpick comes out clean.</li>
+                <li>Allow to cool in the loaf tin for about 10 minutes, then remove from the tin, and allow to cool completely on a cooling rack.</li>
+
+            </ol>
+
+        </div>
+    </div>
+</div>
+
 <hr>
-<img src="img/lemon.jpg"class="img3" >
-<h1>Ingredient</h1>
-<hr>
-<ul>
-    <li>1 2/3 cups (200 g) plain gluten free flour blend</li>
-    <li>3/4 cup (65 g) almond flour</li>
-    <li>1/2 tsp xanthan gum</li>
-    <li>3 tsp baking powder</li>
-    <li>1 cup (200 g) granulated sugar</li>
-    <li>pinch of salt</li>
-    <li>2 sticks (226 g) unsalted butter, softened</li>
-    <li>zest of 3 lemons</li>
-    <li>4 medium eggs, room temperature</li>
-    <li>1/2 cup (120 mL) milk, room temperature</li>
-    <li>1 tsp vanilla paste</li>
-    <li>6 tbsp lemon juice</li>
-</ul>
-<h1>Preparation steps</h1>
-<hr>
-<ol>
-    <li>Pre-heat the oven to 355 ºF (180 ºC) and line a loaf baking tin with greaseproof/baking paper. (Dimensions of loaf tin: 8.5 inch/21cm long, 4.5 inch/11cm wide and 3inch/7cm high.)</li>
-    <li>In a large bowl, sift together the gluten free flour blend, almond flour, xanthan gum and baking powder. Add the sugar and salt, and mix until combined.</li>
-    <li>Add the softened butter and, using either a stand mixer with the paddle attachment or a hand mixer with the double beater attachments, work the butter into the dry ingredients until you get a texture resembling coarse breadcrumbs in size</li>
-    <li>Add the lemon zest. In a separate bowl, mix together the eggs, milk, vanilla and lemon juice. Add the wet ingredients to the dry+butter mixture, and whisk/mix well until no flour clumps remain and everything is evenly distributed.</li>
-    <li>Transfer the cake batter into the prepared loaf tin, smooth out the top, and bake in the pre-heated oven at 355 ºF (180 ºC) for about 1 hour or until risen, golden brown on top and an inserted toothpick comes out clean.</li>
-    <li>Allow to cool in the loaf tin for about 10 minutes, then remove from the tin, and allow to cool completely on a cooling rack.</li>
+<div data-role="footer">
+    <div data-role="controlgroup" data-type="horizontal">
+        <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
+        <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
+        <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
+        <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
+    </div>
+</div>
 
-</ol>
-
-</body>
-
-<hr>
-<ul id="nav">
-
-    <button><a href="menu.html">Menu</a></button>
-    <button>Favorits</button>
-    <button>My calender</button>
-    <button>Preferences</button>
-
-</ul>
 </hr>
 
 
@@ -87,4 +76,3 @@
 
 </body>
 </html>
-
