--- a/www/tea.html
+++ b/www/tea.html
@@ -13,39 +13,35 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Crepe</title>
+    <title>tea</title>
 </head>
 <body >
 <div data-role="page">
     <div data-role="header">
-        <h1>Crepe</h1>
+        <h1>Green Tea</h1>
     </div>
     <hr>
     <div data-role="main" class="ui-content">
-        <div><img src="img/crepe.jpg"class="img3" ></div>
+        <div><img src="img/greentea.jpg"class="img3" ></div>
         <div data-role="content">
             <h1>Ingredient</h1>
             <hr>
             <ul data-role="listview" data-inset="true">
-
-                <li>300 g flour</li>
-                <li>3 whole eggs</li>
-                <li>3 tablespoons of sugar</li>
-                <li>2 tablespoons of oil</li>
-                <li>50 g melted butter</li>
-                <li>60 cl of milk</li>
-
+                <li>2 teaspoons Green tea leaves</li>
+                <li>2 cups Water</li>
+                <li>Honey , (optional) to taste</li>
             </ul>
         </div>
         <div data-role="content">
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
-                <li>Put the flour in a bowl and form a well</li>
-                <li>Add the whole eggs, sugar, oil and butter</li>
-                <li>
-                    Mix delicately with a whisk, gradually adding the milk. The dough thus obtained should have a consistency of a slightly thick liquid</li>
-                <li>Heat a non-stick pan and lightly oil it. Pour in a ladle of dough, distribute it in the pan and wait until it is cooked on one side before turning it over. Cook all the pancakes over low heat.</li>
+                <li>To begin making Green Tea Recipe, take a saucepan and start heating water on a high heat.</li>
+                <li>Once the water starts boiling, turn off the heat and add the green tea leaves.</li>
+                <li>Keep it covered for a minute.</li>
+                <li>Strain the green tea into the tea cups.</li>
+                <li>Add honey to taste (only as a sweetener, you can completely skip it), give it a swirl and serve.</li>
+                <li>Serve Green tea recipe with a snack like Baked Aloo Tikki Recipe and Dhaniya Pudina Chutney Recipe (Green Chutney) during evenings.</li>
 
                 <li>Enjoy!</li>
             </ol>
